--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +11,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100%;
 }
 
 code {
@@ -87,7 +94,7 @@ h3 {
 }
 
 .main-content-text {
-  height: 100%;
+  min-height: 100%;
   width: 70%;
   display: flex;
   flex-direction: column;
@@ -131,7 +138,6 @@ h3 {
 }
 
 .footer-links {
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -238,4 +244,75 @@ h3 {
 .service-enum {
   max-width: 100%;
   text-align: center;
+}
+
+@media (max-width: 786px) {
+  .intro-container {
+    background-image: url("https://spb.mrdivanoff.ru/image/cache/data/product/22242/22242_0-580x380.jpg");
+    grid-template-columns: 1fr;
+  }
+
+  .intro-text {
+    margin: 20px;
+  }
+
+  .intro-contact {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 15px;
+  }
+
+  .intro-name {
+    font-size: 20px;
+  }
+
+  .intro-object-description {
+    font-size: 24px;
+  }
+
+  .intro-description {
+    font-size: 24px;
+    text-align: center;
+  }
+
+  .btn {
+    font-size: 18px;
+  }
+  
+  .main-container {
+    grid-template-columns: 1fr;
+    padding: 40px;
+  }
+
+  .main-img {
+    width: 100%;
+    height: auto;
+  }
+
+  .main-content-text {
+    width: 100%;
+    text-align: center;
+  }
+
+  .content-text-title {
+    font-size: 24px;
+  }
+
+  .services-title {
+    font-size: 24px;
+  }
+
+  .services {
+    grid-template-columns: 1fr;
+  }
+
+  .footer-content {
+    grid-template-columns: auto;
+    padding: 40px;
+  }
+
+  .form-text {
+    font-size: 24px;
+  }
+
 }
