--- a/src/index.css
+++ b/src/index.css
@@ -308,7 +308,8 @@ h3 {
 
   .footer-content {
     grid-template-columns: auto;
-    padding: 0;
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
 
   .form-text {
